# braille-card-and-cylinder-stl-generator

./: .cursorrules  .gitignore  .pre-commit-config.yaml  .vercelignore  BRAILLE_DOT_ADJUSTMENTS_VERIFICATION_REPORT.md  CHANGELOG.md  CLIENT_SIDE_CSG_DOCUMENTATION.md  CLIENT_SIDE_CSG_IMPLEMENTATION_SUMMARY.md  CLOUDFLARE_IMPLEMENTATION_CHECKLIST.md  CLOUDFLARE_PAGES_DEPLOYMENT.md  CLOUDFLARE_PAGES_DEPLOYMENT_GUIDE.md  CLOUDFLARE_PAGES_IMPLEMENTATION_FRAMEWORK.md  CONTRIBUTING.md  DEPLOYMENT_READINESS_CHECKLIST.md  DEPLOYMENT_README.md  DEPLOY_TRIGGER.md  FINAL_SESSION_SUMMARY.md  GIT_COMMIT_COMMANDS.txt  IMPLEMENTATION_SUMMARY.md  LICENSE  LINTING_NOTES.md  MANIFOLD_WASM_IMPLEMENTATION.md  MIGRATION_CHECKPOINT.md  PHASE_0_SUMMARY.md  PHASE_1.2_COMPLETE_SUMMARY.md  PHASE_1.2_PROGRESS_UPDATE.md  PHASE_1.2_STATUS.md  PHASE_4_COMPLETE.md  PHASE_4_PLAN.md  PHASE_6_STATUS.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE_MIGRATION_SUMMARY.md  README.md  RECESS_INDICATOR_SPECIFICATIONS.md  REFACTORING_COMPLETE_SUMMARY.md  REFACTORING_PROGRESS.md  REFACTORING_ROADMAP.md  SECURITY.md  SESSION_COMPLETE_SUMMARY.md  SETTINGS_SCHEMA_CORE_SPECIFICATIONS.md  (+36 more)
.cursor/plans/: ada_accessibility_remediation_roadmap_ef2f9ee0.plan.md  dead-code-cleanup-braille-stl_91653c6b.plan.md  stl_generation_logic_analysis_a28df30a.plan.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  cloudflare-deploy.yml  vercel-deploy-hook.yml
.vercel/: project.json
OpenSCAD/: PARAMETER_MAPPING.md  README.md
app/: __init__.py  api.py  cache.py  exporters.py  geometry_spec.py  models.py  utils.py  validation.py
app/geometry/: __init__.py  booleans.py  braille_layout.py  cylinder.py  cylinder_complete.py  dot_shapes.py  plates.py
app/legacy/: cache.py
cloudflare/: _headers  _redirects
docs/: KNOWN_ISSUES.md  README.md  RELEASING.md
docs/deployment/: DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_FIX_SUMMARY.md  DEPLOYMENT_READINESS_CHECKLIST.md  VERCEL_DEPLOYMENT_FIX.md  VERCEL_DEPLOYMENT_FIXES_SUMMARY.md  VERCEL_JS_LOUIS_DEPLOYMENT.md  VERCEL_OPTIMIZATION_ROADMAP.md
docs/deployment/archive/: README.md  VERCEL_COUNTER_PLATE_BUG_FIX.md
docs/development/: ADA_ACCESSIBILITY_VALIDATION_SOP.md  BROWSER_COMPATIBILITY_AUDIT.md  CHARACTER_MARKER_FIX.md  CLIENT_SIDE_CSG_DOCUMENTATION.md  CLIENT_SIDE_CSG_IMPLEMENTATION_SUMMARY.md  CLIENT_SIDE_CSG_TEST_PLAN.md  CODEBASE_AUDIT_AND_RENOVATION_PLAN.md  CODE_AUDIT_REPORT.md  EMBOSSING_PLATE_RECESS_FIX.md  IMPLEMENTATION_PROCESS_ANALYSIS.md  LINTING_NOTES.md  MAJOR_FEATURE_IMPLEMENTATION_SOP.md  MANIFOLD_CYLINDER_FIX.md  MANIFOLD_WORKER_VALIDATION.md  OPTIONAL_MANIFOLD3D_PATH.md  PYTHON_VERSION_UPDATE.md  openscad-web_bridge_tool_303c433e.plan.md  openscad-web_bridge_tool_CONSOLIDATED.plan.md
docs/guides/: BUSINESS_CARD_TRANSLATION_GUIDE.md  CYLINDER_GUIDE.md  _bana_business_cards_verified_source.md
docs/progress/: FINAL_SESSION_SUMMARY.md  MIGRATION_CHECKPOINT.md  PHASE_1.1_SUMMARY.md  PHASE_1.2_COMPLETE_SUMMARY.md  PHASE_1.2_PROGRESS_UPDATE.md  PHASE_1.2_REMAINING_WORK.md  PHASE_1.2_STATUS.md  PHASE_4_COMPLETE.md  PHASE_6_STATUS.md  README.md  REFACTORING_COMPLETE_SUMMARY.md  REFACTORING_PROGRESS_ANALYSIS.md  REFACTORING_ROADMAP.md  REFACTORING_SESSION_COMPLETE.md  SESSION_COMPLETE_SUMMARY.md
docs/progress/archive/: PHASE_4_PLAN.md  REFACTORING_STATUS_SUMMARY.md
docs/security/: ENVIRONMENT_VARIABLES.md  README.md  SECURITY_AUDIT_FOLLOWUP.md  SECURITY_AUDIT_REPORT.md  SECURITY_FIXES_APPLIED.md  SECURITY_IMPLEMENTATION_SUMMARY.md
docs/specifications/: BRAILLE_DOT_ADJUSTMENTS_SPECIFICATIONS.md  BRAILLE_DOT_SHAPE_SPECIFICATIONS.md  BRAILLE_SPACING_SPECIFICATIONS.md  BRAILLE_TEXT_INPUT_AND_LANGUAGE_SPECIFICATIONS.md  BRAILLE_TRANSLATION_PREVIEW_SPECIFICATIONS.md  CACHING_SYSTEM_CORE_SPECIFICATIONS.md  CARD_THICKNESS_PRESET_SPECIFICATIONS.md  LIBLOUIS_TRANSLATION_CORE_SPECIFICATIONS.md  RECESS_INDICATOR_SPECIFICATIONS.md  SETTINGS_SCHEMA_CORE_SPECIFICATIONS.md  SPECIFICATIONS_INDEX.md  STL_EXPORT_AND_DOWNLOAD_SPECIFICATIONS.md  SURFACE_DIMENSIONS_SPECIFICATIONS.md  SURFACE_DIMENSIONS_VERIFICATION_REPORT.md  UI_INTERFACE_CORE_SPECIFICATIONS.md  VERIFICATION_GUIDE.md
public/: index.html  sw.js
public/liblouis/: easy-api.js
scripts/: README.md  _extract_bana_text.py  build_cylinder_module.py  deploy.js  extract_cylinder_functions.py  extracted_cylinder_funcs.txt  fetch_bana_business_cards.py  git_push.ps1  pregenerate.py  remove_cylinder_funcs.py  replace_prints_with_logging.py  smoke_test.py  verify-deployment.js
src/: App.js  main.js  style.css
src/components/: BrailleInput.js  ProgressBar.js  STLViewer.js
src/lib/: braille-generator.js  braille-patterns.js  cache-manager.js  geometry-utils.js  performance-monitor.js  stl-exporter.js  worker-manager.js
src/utils/: file-utils.js
src/workers/: geometry-worker.js  liblouis-worker.js
static/: liblouis-worker.js
static/examples/: STLExporter.js
static/examples/jsm/geometries/: TextGeometry.js
static/examples/jsm/loaders/: FontLoader.js
static/js/: stl-generator.js
static/liblouis/tables/: latinUppercaseComp6.uti  spaces.uti
static/workers/: csg-worker-manifold.js  csg-worker.js
templates/: _brennen_dev_index.html  index.html
tests/: conftest.py  generate_golden_fixtures.py  test-runner.js  test_golden.py  test_smoke.py
tests/e2e/: placeholder.spec.ts  silentTruncation.spec.ts  webglDegradation.spec.ts
tests/fixtures/: card_counter_small.json  card_counter_small.stl  card_positive_small.json  card_positive_small.stl  cylinder_counter_small.json  cylinder_counter_small.stl  cylinder_positive_small.json  cylinder_positive_small.stl  golden-masters.js
tests/frontend/: placeholder.test.js
tests/integration/: complete-workflow.test.js
tests/performance/: benchmark.test.js
tests/unit/: phase2-integration.test.js  phase3-workers.test.js  phase4-stl-generation.test.js  phase5-ui-components.test.js  phase7-deployment.test.js  phase8-performance.test.js
