[project]
name = "braille-stl-generator"
version = "1.0.0"
description = "Braille card and cylinder STL generator"
requires-python = ">=3.9,<3.13"
dependencies = [
    "flask==2.3.3",
    "trimesh==3.23.5",
    "numpy==1.26.4",
    "flask-cors==4.0.0",
    "shapely==2.0.6",
    "Flask-Limiter==3.8.0",
    "redis==5.0.7",
    "requests==2.32.3",
]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function calls in argument defaults
    "SIM108", # use ternary operator (sometimes less readable)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "SIM"]
"scripts/*" = ["B"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start permissive, tighten later
ignore_missing_imports = true  # Many libs don't have stubs
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--tb=short", "--strict-markers"]
markers = [
    "smoke: Basic smoke tests",
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]
