[project]
name = "braille-stl-generator"
version = "2.1.0"
description = "Braille card and cylinder STL generator"
requires-python = ">=3.12"

# MINIMAL PRODUCTION DEPENDENCIES (Vercel deployment)
# Server only provides lightweight JSON geometry specs
# Client-side CSG handles all heavy computation
dependencies = [
    "flask==3.1.2",
    "flask-cors==6.0.2",
]

# OPTIONAL DEPENDENCIES FOR LOCAL DEVELOPMENT
# Heavy dependencies for optional server-side STL generation
# (Does not work on Vercel, but useful for local dev/testing)
[project.optional-dependencies]
dev = [
    # Geometry processing (server-side generation)
    "numpy==2.4.1",
    "trimesh==4.5.3",
    "shapely==2.1.2",
    "mapbox_earcut==2.0.0",
    "scipy==1.17.0",        # For mesh.fix_normals()
    "matplotlib==3.10.8",    # For character markers
    "manifold3d==3.3.2",    # Boolean operations

    # Development tools
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "ruff==0.14.13",
    "mypy==1.7.1",
    "pre-commit==3.5.0",
]

test = [
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
]

# REMOVED FROM PRODUCTION (2026-01-05):
# - Flask-Limiter (rate limiting - Vercel provides DDoS protection)
# - redis (caused Upstash archived DB failures)
# - requests (only used for Blob upload)
# - Heavy geometry deps (moved to [dev] extras)
#
# See: docs/development/CODEBASE_AUDIT_AND_RENOVATION_PLAN.md

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function calls in argument defaults
    "SIM108", # use ternary operator (sometimes less readable)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "SIM"]
"scripts/*" = ["B"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start permissive, tighten later
ignore_missing_imports = true  # Many libs don't have stubs
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--tb=short", "--strict-markers"]
markers = [
    "smoke: Basic smoke tests",
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]
